<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aula6Activity">

    <EditText
        android:id="@+id/txtCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cep"
        />

    <Button
        android:id="@+id/buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:onClick="onClickBuscar"
        />

    <EditText
        android:id="@+id/txtLogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logradouro"
        />

    <EditText
        android:id="@+id/txtComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/complemento"
        />

    <EditText
        android:id="@+id/txtBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bairro"
        />

    <EditText
        android:id="@+id/txtLocalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/localidade"
        />

    <EditText
        android:id="@+id/txtUf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uf"
        />

    <Button
        android:id="@+id/btnAula6Ex2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercicio2"/>



</LinearLayout>