<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ex3Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questoes"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quiz_transito_banner"
        android:contentDescription="Logo do Quiz Trânsito"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/placa"
        android:contentDescription="Placa de trânsito"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:backgroundTint="#2DC82D"
        android:text="@string/resposta1"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:backgroundTint="#2DC82D"
        android:text="@string/resposta2"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:backgroundTint="#2DC82D"
        android:text="@string/resposta3"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:backgroundTint="#2DC82D"
        android:text="@string/resposta4"
        android:textColor="@color/black"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/proxima_pergunta"
        />


</LinearLayout>