<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/buttonEx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/buttonEx2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        />

    <Button
        android:id="@+id/buttonEx3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        />

    <Button
        android:id="@+id/buttonEx4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        />



</LinearLayout>