<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#F05311"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ex4Activity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/consumo_total"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/couvert"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/dividir"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white" />

        </TableRow>

        <Button
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#B1ADAD"
            android:text="@string/btn_calcular"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="0dp" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/taxa_servico"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="15dp"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/conta_total"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/valor_pessoa"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white" />

        </TableRow>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_balaio_lenha"
            />

    </TableLayout>


</LinearLayout>